k8s/preview/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: table2taste-preview-__SUBDOMAIN__
  labels:
    app: table2taste
    type: preview
    branch: __SUBDOMAIN__
